<resources>
    <string name="app_name">Surah Yaseen</string>

    <!--Original-->
    <string name="app_id">ca-app-pub-1627749521334309~4444210274</string>

    <string name="low_app_open_id">ca-app-pub-1627749521334309/5475302319</string>
    <string name="med_app_open_id">ca-app-pub-1627749521334309/7800367309</string>
    <string name="banner_id">ca-app-pub-1627749521334309/5920943472</string>
    <string name="inline_banner_id">ca-app-pub-1627749521334309/5668231829</string>
    <string name="interstitial_id">ca-app-pub-1627749521334309/7397676672</string>
    <string name="native_ad">ca-app-pub-1627749521334309/2849138977</string>


    <string name="channelId" translatable="false">com.zohalapps.surahs.yaseen.rahman.alquran.audio.urdu.fcm</string>

    <string name="imageIcon">imageIcon</string>
    <string name="home">Home</string>
    <string name="setting">Setting</string>
    <string name="feedback">Feedback:</string>
    <string name="rate_us">Rate Us</string>
    <string name="more_apps">More Apps</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="invite_a_friend">Invite a friend</string>
    <string name="prophet_names">Prophet Names</string>
    <string name="allah_names">Allah Names</string>
    <string name="_6_qalma">6 Qalma</string>
    <string name="_4_qul">4 Qul</string>
    <string name="supplications">Supplications</string>


    <string name="compass_rose_image_description">Compass rose showing to north</string>
    <string name="device_heading_indicator_image_description">Indicates in which direction the device is pointing</string>

    <string name="cardinal_direction_north">North</string>
    <string name="cardinal_direction_northeast">Northeast</string>
    <string name="cardinal_direction_east">East</string>
    <string name="cardinal_direction_southeast">Southeast</string>
    <string name="cardinal_direction_south">South</string>
    <string name="cardinal_direction_southwest">Southwest</string>
    <string name="cardinal_direction_west">West</string>
    <string name="cardinal_direction_northwest">Northwest</string>

    <string name="cardinal_direction_north_abbreviation">N</string>
    <string name="cardinal_direction_east_abbreviation">E</string>
    <string name="cardinal_direction_south_abbreviation">S</string>
    <string name="cardinal_direction_west_abbreviation">W</string>

    <string name="degrees" translatable="false">%1$d°</string>

    <string name="degree_0_text" translatable="false">0</string>
    <string name="degree_30_text" translatable="false">30</string>
    <string name="degree_60_text" translatable="false">60</string>
    <string name="degree_90_text" translatable="false">90</string>
    <string name="degree_120_text" translatable="false">120</string>
    <string name="degree_150_text" translatable="false">150</string>
    <string name="degree_180_text" translatable="false">180</string>
    <string name="degree_210_text" translatable="false">210</string>
    <string name="degree_240_text" translatable="false">240</string>
    <string name="degree_270_text" translatable="false">270</string>
    <string name="degree_300_text" translatable="false">300</string>
    <string name="degree_330_text" translatable="false">330</string>
    <string name="ad_txt">Ad</string>
    <string name="advertisement_txt">Advertisement</string>


    <string name="day1">Sunday</string>
    <string name="day2">Monday</string>
    <string name="day3">Tuesday</string>
    <string name="day4">Wednesday</string>
    <string name="day5"><Thu></Thu>rsday</string>
    <string name="day6">Friday</string>
    <string name="day7">Saturday</string>


    <string name="day1m">S</string>
    <string name="day2m">M</string>
    <string name="day3m">T</string>
    <string name="day4m">W</string>
    <string name="day5m">T</string>
    <string name="day6m">F</string>
    <string name="day7m">S</string>

    <string name="month1">Muharram</string>
    <string name="month2">Safar</string>
    <string name="month3">Rabi-ul-Awwal</string>
    <string name="month4">Rabi-us Sani</string>
    <string name="month5">Jamadi-ul-Awwal</string>
    <string name="month6">Jamadi-us-Sani</string>
    <string name="month7">Rajab</string>
    <string name="month8">Shaban</string>
    <string name="month9">Ramadan</string>
    <string name="month10">Shawal</string>
    <string name="month11">Zil-Qadah</string>
    <string name="month12">Zul-Hijah</string>


    <string name="month1g">January</string>
    <string name="month2g">February</string>
    <string name="month3g">March</string>
    <string name="month4g">April</string>
    <string name="month5g">May</string>
    <string name="month6g">June</string>
    <string name="month7g">July</string>
    <string name="month8g">August</string>
    <string name="month9g">September</string>
    <string name="month10g">October</string>
    <string name="month11g">November</string>
    <string name="month12g">December</string>


    <string name="gregorian_date_format">%1$s %2$s %3$s</string>
    <string name="islamic_date_format">%1$s %2$s %3$s</string>
    <string name="calender">Calender</string>
    <string name="ad">Ad</string>
    <string name="install">Install</string>
    <string name="tap">Tap</string>
    <string name="reset">reset</string>
    <string name="exit">Do you want to exit?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="qibla">Qibla Direction</string>
    <string name="tasbeeh_counter">Tasbeeh Counter</string>

</resources>