<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="20dp"
    tools:context=".fragments.SettingFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/settingHeader"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:layout_constraintBottom_toTopOf="@id/body"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/settingTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting"
            android:textColor="@color/baseColor"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/body"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/settingHeader">

        <androidx.constraintlayout.widget.ConstraintLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/feedBack"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                app:cardBackgroundColor="@color/white"
                app:cardElevation="5dp"
                app:cardUseCompatPadding="true"
                app:contentPadding="10dp"
                app:layout_constraintTop_toTopOf="parent"
                app:rippleColor="@color/baseColor"
                app:strokeWidth="0dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|start"
                    android:layout_marginStart="10dp"
                    android:contentDescription="@string/imageIcon"
                    android:src="@drawable/feedback_ic" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|start"
                    android:layout_marginStart="70dp"
                    android:text="@string/feedback"
                    android:textSize="15sp" />

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/rateUs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                app:cardBackgroundColor="@color/white"
                app:cardElevation="5dp"
                app:cardUseCompatPadding="true"
                app:contentPadding="10dp"
                app:layout_constraintTop_toBottomOf="@id/feedBack"
                app:rippleColor="@color/baseColor"
                app:strokeWidth="0dp">


                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|start"
                    android:layout_marginStart="10dp"
                    android:contentDescription="@string/imageIcon"
                    android:src="@drawable/rate_ic" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|start"
                    android:layout_marginStart="70dp"
                    android:text="@string/rate_us"
                    android:textSize="15sp" />

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/more"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                app:cardBackgroundColor="@color/white"
                app:cardElevation="5dp"
                app:cardUseCompatPadding="true"
                app:contentPadding="10dp"
                app:layout_constraintTop_toBottomOf="@id/rateUs"
                app:rippleColor="@color/baseColor"
                app:strokeWidth="0dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|start"
                    android:layout_marginStart="10dp"
                    android:contentDescription="@string/imageIcon"
                    android:src="@drawable/more_ic" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|start"
                    android:layout_marginStart="70dp"

                    android:text="@string/more_apps"
                    android:textSize="15sp" />
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/privacy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                app:cardBackgroundColor="@color/white"
                app:cardElevation="5dp"
                app:cardUseCompatPadding="true"
                app:contentPadding="10dp"
                app:layout_constraintTop_toBottomOf="@id/more"
                app:rippleColor="@color/baseColor"
                app:strokeWidth="0dp">


                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|start"
                    android:layout_marginStart="10dp"
                    android:contentDescription="@string/imageIcon"
                    android:src="@drawable/privacy_ic" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|start"
                    android:layout_marginStart="70dp"

                    android:text="@string/privacy_policy"
                    android:textSize="15sp" />
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/invite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                app:cardBackgroundColor="@color/white"
                app:cardElevation="5dp"
                app:cardUseCompatPadding="true"
                app:contentPadding="10dp"
                app:layout_constraintTop_toBottomOf="@id/privacy"
                app:rippleColor="@color/baseColor"
                app:strokeWidth="0dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|start"
                    android:layout_marginStart="10dp"
                    android:contentDescription="@string/imageIcon"
                    android:src="@drawable/invite_ic" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|start"
                    android:layout_marginStart="70dp"
                    android:text="@string/invite_a_friend"
                    android:textSize="15sp" />
            </com.google.android.material.card.MaterialCardView>


            <com.google.android.material.card.MaterialCardView
                android:id="@+id/nativeCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:contentPadding="-3dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/invite"
                app:shapeAppearance="@style/myShape"
                app:strokeColor="@color/black"
                app:strokeWidth="0.2dp">

                <io.supercharge.shimmerlayout.ShimmerLayout
                    android:id="@+id/shimmerLayout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:visibility="gone"
                    app:shimmer_animation_duration="700"
                    app:shimmer_color="#B367B5B6">

                    <include
                        android:id="@+id/shimmer"
                        layout="@layout/native_placeholder" />

                </io.supercharge.shimmerlayout.ShimmerLayout>


                <FrameLayout
                    android:id="@+id/nativeContainer"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:visibility="gone" />

            </com.google.android.material.card.MaterialCardView>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>